added the bonus section

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 </head>
 
 <body>
-
+<!-- header sectionn -->
     <header>
         <div class="head-content">
             <h1>Let's make<br>beautiful flowers a<br>part of your life.</h1>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+            <p >It is a long established fact that a reader will be distracted by the readable content of a page when
                 looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution
                 of letters.</p>
             <button class="btn-pr">Shop now</button>
@@ -30,8 +30,35 @@
         </div>
     </header>
 
+<!-- bonus section -->
+    <div class="bonus-section">
+        <h3 >Our Featured Flowers</h3>
+        <p >It is a long established fact that a reader will be distracted by the readable<br>content of a page when looking at its layout.</p>
+        
+        <div class="bonus-image">
 
+           <div class="b-image1">
+           <div class="imgb1">
+            <img src="./Flower Asset/pngwing 6.png" alt="">
+           </div>
+           <a href="#">Pink Flower Tree</a>
+           </div>
 
+           <div class="b-image2">
+        <div class="img2">
+            <img src="./Flower Asset/pngwing 5.png" alt="">
+        </div>
+            <a href="#">Red Flower Tree</a>
+           </div>
+
+            <div class="b-image3">
+               <div class="img3">
+                <img src="./Flower Asset/pngwing 7.png" alt="">
+               </div>
+                <a href="#"> Yellow Flower Tree</a>
+            </div>
+        </div>
+    </div>
 
     <section></section>
     <main></main>
