added the all styles

--- a/index.html
+++ b/index.html
@@ -37,27 +37,27 @@
 
         <div class="bonus-image">
 
-           <div class="b-image1">
-           <div class="imgb1">
+           <div class="b-image1 ">
+           <div class="imgb1 img1">
             <img src="./Flower Asset/pngwing 6.png" alt="">
            </div>
            <a href="#">Pink Flower Tree</a>
            </div>
 
-           <div class="b-image2">
-        <div class="img2">
+           <div class="b-image1 ">
+        <div class="imgb1 img2">
             <img src="./Flower Asset/pngwing 5.png" alt="">
         </div>
             <a href="#">Red Flower Tree</a>
            </div>
 
-            <div class="b-image3">
-               <div class="img3">
+            <div class="b-image1 ">
+               <div class="imgb1 img3">
                 <img src="./Flower Asset/pngwing 7.png" alt="">
                </div>
                 <a href="#"> Yellow Flower Tree</a>
             </div>
-            
+
         </div>
     </div>
 
