added the new style

--- a/index.html
+++ b/index.html
@@ -60,8 +60,55 @@
 
         </div>
     </div>
+    
+    <!-- optional  part -->
 
-    <section></section>
+   <div class="optional-section">
+    <div class="optional">
+
+        <div class="op">
+            <div class="op-img">
+                <img src="./Flower Asset/Group 57.png" alt="">
+            </div>
+            <div class="op-content"> 
+                <p>Same Day Delivery. Click & Collect.</p>
+            </div>
+        </div>
+        <div class="op">
+            <div class="op-img">
+                <img src="./Flower Asset/Group 58.png" alt="">
+            </div>
+            <div class="op-content"> 
+                <p>Fresh Flowers. Local Growers.</p>
+            </div>
+        </div>
+        <div class="op">
+            <div class="op-img">
+                <img src="./Flower Asset/Group 59.png" alt="">
+            </div>
+            <div class="op-content"> 
+                <p>24/7 Free Support.</p>
+            </div>
+        </div>
+    </div>
+   </div>
+
+<!-- hot deal section -->
+
+    <section>
+        <div class="hot-deal">
+            <div class="hot-deal-content">
+                <h2>Hot Deal ! Sale Up To 25% Off</h2>
+                <p>It is a long established fact that a reader will be distracted by the<br>readable content of a page when looking at its layout.</p>
+                <button class="btn-pr">Sign Up</button>
+            </div>
+            <div class="hot-deal-image">
+                <img src="./Flower Asset/pngwing 8.png" alt="">
+            </div>
+        </div>
+
+    </section>
+
     <main></main>
     <footer></footer>
 </body>
