--- a/index.html
+++ b/index.html
@@ -109,8 +109,36 @@
 
     </section>
 
-    <main></main>
-    <footer></footer>
+    <main >
+        <div class="instagram-section">
+            <div class="inst-content">
+                <h2>Instagram</h2>
+                <p>It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            </div>
+            <div class="insta-image">
+                <img src="./Flower Asset/Flower 01.png" alt="">
+                <img src="./Flower Asset/Rectangle 4.png" alt="">
+                <img src="./Flower Asset/Rectangle 5.png" alt="">
+                <img src="./Flower Asset/Rectangle 6.png" alt="">
+            </div>
+        </div>
+
+        <!-- latest deals section -->
+
+        <div class="latest-deals">
+            <h2>Get The Latest Deals</h2>
+            <p>$30 coupon for first shopping</p>
+            <input  class="mail" placeholder="enter your email here">
+            <button class="btn-pr">Subscribe</button>
+        </div>
+
+    </main>
+
+    <footer>
+        <h2><span>Flower</span> Shop</h2>
+        <p>It is a long established fact that a reader will be distracted by the <br> readable content of a page when looking at its layout.</p>
+        <small>@2020-2023, FlowerShop.com. All rights reserved. </small>
+    </footer>
 </body>
 
 </html>
