added the changes style

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="hot-deal">
             <div class="hot-deal-content">
                 <h2>Hot Deal ! Sale Up To 25% Off</h2>
-                <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <p>It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
                 <button class="btn-pr">Sign Up</button>
             </div>
             <div class="hot-deal-image">
